objects/SFDocumentor__Record_Type_Collection__c.object
<CustomObject>
    <description>Collection of all Record Types available in current Org</description>
    <fields>
        <fullName>SFDocumentor__BusinessProcessId__c</fullName>
        <label>BusinessProcess Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__Class_Names__c</fullName>
        <label>Class Names</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__CreatedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Created By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Record_Types_Collection</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__CreatedDate__c</fullName>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__Created_by_Name__c</fullName>
        <label>Created by Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__Description__c</fullName>
        <label>Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__DeveloperName__c</fullName>
        <label>DeveloperName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__Is_Hardcoded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Hardcoded Anywhere?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__LastModifiedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Record_Types_Collection1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__LastModifiedDate__c</fullName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__Last_Sync_Date__c</fullName>
        <label>Last SFDoc Sync Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__Link_URL__c</fullName>
        <formula>HYPERLINK(SFDocumentor__Link__c , Name ,&apos;_blank&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Setup Link/URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__Link__c</fullName>
        <label>Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__NamespacePrefix__c</fullName>
        <label>Namespace Prefix</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__Number_of_Records__c</fullName>
        <label>Number of Records</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__Object_Name__c</fullName>
        <label>Object Name</label>
        <referenceTo>SFDocumentor__Object_Collection__c</referenceTo>
        <relationshipLabel>Record Types Collection</relationshipLabel>
        <relationshipName>Record_Types_Collection</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__Percentage_Used__c</fullName>
        <formula>IF(OR(SFDocumentor__Total_Records__c == 0,SFDocumentor__Total_Records__c == null, SFDocumentor__Total_Records_on_Object__c == 0) , 0, ( SFDocumentor__Total_Records__c  /  SFDocumentor__Total_Records_on_Object__c ))</formula>
        <label>Percentage Used</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__Recent_Record_Inserted_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recent Record Inserted By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Record_Types_Collection2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__Recent_Record_Inserted_On__c</fullName>
        <label>Recent Record Inserted On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__Recent_Record_Updated_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recent Record Updated By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Record_Types_Collection3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__Recent_Record_Updated_On__c</fullName>
        <description>This field will show when record was updated last time.</description>
        <label>Recent Record Updated On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__RecordType_Id__c</fullName>
        <externalId>true</externalId>
        <label>RecordType Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__Record_Link__c</fullName>
        <description>This URL will store link for updated record .</description>
        <label>Record Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__Record_Type_API_Name__c</fullName>
        <label>Record Type API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__SFDocumentorDesc__c</fullName>
        <label>SFDoc Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Used</fullName>
                </value>
                <value>
                    <fullName>Unused</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SFDocumentor__Total_Records__c</fullName>
        <label>Total Records</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__Total_Records_on_Object__c</fullName>
        <label>Total Records on Object</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Record Type Collection</label>
    <listViews>
        <fullName>SFDocumentor__All</fullName>
        <columns>NAME</columns>
        <columns>SFDocumentor__Description__c</columns>
        <columns>SFDocumentor__Is_Hardcoded__c</columns>
        <columns>SFDocumentor__Object_Name__c</columns>
        <columns>SFDocumentor__Link_URL__c</columns>
        <columns>SFDocumentor__Total_Records__c</columns>
        <columns>SFDocumentor__Status__c</columns>
        <columns>SFDocumentor__Percentage_Used__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Record Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Record Types Collection</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>